--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
           # cache: pip
 
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+          check-latest: true
+
+      - run: go version
+
       - name: Run deploy script
         run: ./.github/scripts/deploy.sh
         env:
